test/should_pass/underscore.erl
-module(underscore).

-compile([export_all]).

-spec underscore(_) -> _.
underscore(1) ->
    "apa".
